fixed z-index for hero main block on complete animation

--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -3,7 +3,7 @@
     display: block;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 20px;
+    padding: 0 20px 11.9375rem;
     font-size: 16px;
     color: rgb(0, 0, 0);
     line-height: 1.5625;
